--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile 'org.neo4j.driver:neo4j-java-driver:4.0.1'
     compile 'org.mongodb:mongodb-driver:3.3.0'
     compile 'redis.clients:jedis:2.9.0'
-}
+    // https://mvnrepository.com/artifact/org.neo4j/neo4j-graphdb-api
+    compile group: 'org.neo4j', name: 'neo4j-graphdb-api', version: '4.0.5'}
