--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile 'org.mongodb:mongodb-driver:3.3.0'
     compile 'redis.clients:jedis:2.9.0'
     // https://mvnrepository.com/artifact/org.neo4j/neo4j-graphdb-api
-    compile group: 'org.neo4j', name: 'neo4j-graphdb-api', version: '4.0.5'}
+    compile group: 'org.neo4j', name: 'neo4j-graphdb-api', version: '4.0.5'
+}
