Added apoc plugin for Neo4j, finialize get car rating method

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - "./data:/data"
       - "./log:/log"
+      - "./plugins:/plugins"
     ports:
       - "7474:7474"
       - "7473:7473"
